
Name: Your Name (web page or e-mail)
Date: yyyy/mm/dd hh:mm:ss
Tag: cvs-tag-for-this-change
Description:

Here is a test entry

----------------------------------------------------------------------
Name: John Reppy (http://cs.uchicago.edu/~jhr)
Date: yyyy/mm/dd
Description:

----------------------------------------------------------------------
Name: John Reppy (http://cs.uchicago.edu/~jhr)
Date: 2014/06/07
Description:
Fixed a long-standing bug in Socket.recvVec, which prevented the result
from being used in a string pattern match (thanks to Vesa Norrman
for the fix).

----------------------------------------------------------------------
Name: John Reppy (http://cs.uchicago.edu/~jhr)
Date: 2014/05/01
Description:
Fixed minor issue in an error message; type variable name should be
printed with leading '

----------------------------------------------------------------------
Name: John Reppy (http://cs.uchicago.edu/~jhr)
Date: 2013/11/25
Description:
Added PackWord{16,32}{Big,Little} structures to the Unsafe module.
This change makes the UNSAFE signature closer to the MLton version,
although we still need the PackReal structures.

----------------------------------------------------------------------
Name: John Reppy (http://cs.uchicago.edu/~jhr)
Date: 2013/07/01
Description:

*************************** Version 110.76 ***************************

----------------------------------------------------------------------
Name: Lars Bergstrom (larsberg@cs.uchicago.edu)
Date: 2013/06/04
Description:
Fix bug #115 (BinPrimIO writer method getPos doesn't work under CML).
Just needed to port the position update from mkReader code to the
mkWriter code. 

----------------------------------------------------------------------
Name: Lars Bergstrom (larsberg@cs.uchicago.edu)
Date: 2013/06/04
Description:
Fix bug #111 (Socket.acceptNB returns somewhat broken sockets).
The problem was that under Win32, sockets returned from accept inherit